[gd_scene load_steps=5 format=3 uid="uid://ca4idfisrxy12"]

[ext_resource type="Script" uid="uid://4qx1srcef101" path="res://Scripts/start.gd" id="1_3bxa3"]
[ext_resource type="PackedScene" uid="uid://oh60f4lm7e0i" path="res://Scenes/settings.tscn" id="2_5ogh5"]
[ext_resource type="AudioStream" uid="uid://b6n7xw6ilyttk" path="res://Assets/music/01 - Falling Apart (Prologue).mp3" id="2_r48yj"]

[sub_resource type="LabelSettings" id="LabelSettings_bk35t"]
font_size = 90
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3bxa3")

[node name="Settings" parent="." instance=ExtResource("2_5ogh5")]
visible = false
layout_mode = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.5
offset_top = -121.0
offset_right = 130.5
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 85
text = "START"

[node name="TutorialButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.5
offset_top = 28.0
offset_right = 208.5
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 85
text = "TUTORIAL"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -164.5
offset_top = 36.0
offset_right = 164.5
offset_bottom = 132.0
grow_horizontal = 2
text = "Cursed Diamonds"
label_settings = SubResource("LabelSettings_bk35t")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_r48yj")
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.5
offset_top = 192.0
offset_right = 104.5
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "SETTINGS"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
